--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
 	<div>
       <div class="jumbotron">
 		    <div class="container">
-				<h1 class="pybursa_project">Bursa Project</h1>
-		    	<h3 class="description">Yeah Description</h3>
+				  <h1 class="pybursa_project">PyBursa Project</h1>
+		    	<h3 class="description">Description</h3>
 		    	<p class="first-p">	
 		    			В этом курсе мы сместили акцент в сторону практики.
 						Будет умеренное количество теории - максимум практики.
@@ -96,6 +96,7 @@
       		</div>
       </footer>
     </div>
+  <div class="hide">
     <div class="alert alert-success" role="alert">Пора</div>
     <div class="alert alert-info" role="alert">начинать</div>
     <div class="alert alert-warning" role="alert">учить</div>
@@ -146,6 +147,7 @@
             Basic panel example
           </div>
         </div>
+  </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
