--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -59,7 +59,6 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1 class="course">Persianova Olena</h1>
-        </p>
         <div class="bs-example" data-example-id="simple-table">
           <table class="table table-striped table table-bordered">
             <caption>Student's card</caption>
@@ -93,7 +92,7 @@
                 <td>Olena.Persianova</td>
               </tr>
               <tr>
-                <td>Average</td>
+                <td>Average Grade</td>
                 <td>99.8</td>
               </tr>
               <tr>
