--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
     <title>Contacts page</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
 
 </head>
@@ -23,7 +23,6 @@
                     <nav>
                         <ul class="nav masthead-nav">
                             <li><a href="index.html"> Main </a></li>
-
                             <li class="active"><a href="contact.html"> Contacts </a></li>
                         </ul>
                     </nav>
@@ -42,7 +41,7 @@
                                 Name: Frank Sinatra
                             </li>
                             <li>
-                                Email: <a href="">hello@domain.com</a>
+                                Email: hello@domain.com
                             </li>
                             <li>
                                 Phone: (900) 987 65 43, (900) 234 56 78
@@ -62,7 +61,7 @@
                                 Name: Frank Sinatra
                             </li>
                             <li>
-                                Email: <a href="">hello@domain.com</a>
+                                Email: hello@domain.com
                             </li>
                             <li>
                                 Phone: (900) 987 65 43, (900) 234 56 78
@@ -81,7 +80,7 @@
                                 Name: Frank Sinatra
                             </li>
                             <li>
-                                Email: <a href="">hello@domain.com</a>
+                                Email: hello@domain.com
                             </li>
                             <li>
                                 Phone: (900) 987 65 43, (900) 234 56 78
@@ -119,7 +118,7 @@
 
 <!-- start scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="../static/js/bootstrap.min.js"></script>
+<script src="../static/js/bootstrap.js"></script>
 <!--/ end scripts -->
 </body>
 </html>
