--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
-    <title>PyBursa Project</title>
+    <title>Contact</title>
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
