--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
-    <title>PyBursa Project</title>
+    <title>Student list</title>
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
     <script type="text/javascript" src="../static/js/mine.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
@@ -91,6 +90,58 @@
   </table>
 </div>
 
+<div class="hide">
+    <div class="alert alert-success" role="alert">Пора</div>
+    <div class="alert alert-info" role="alert">начинать</div>
+    <div class="alert alert-warning" role="alert">учить</div>
+    <div class="alert alert-danger" role="alert">Python</div>
+    <div class="alert1" role="alert">Python</div>
+    <div class="alert2" role="alert">Python</div>
+
+      <div class="btn-group btn-group-justified" role="group" aria-label="...">
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-default">Left</button>
+    </div>
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-default">Middle</button>
+    </div>
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-default">Right</button>
+    </div>
+    </div>
+
+    <div class="btn-group dropup">
+    <button type="button" class="btn btn-default">Dropup</button>
+    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="caret"></span>
+      <span class="sr-only">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu">
+      <!-- Dropdown menu links -->
+    </ul>
+  </div>
+
+        <div class="panel panel-default">
+          <div class="panel-body">
+            Basic panel example
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            Basic panel example
+        </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            Basic panel example
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            Basic panel example
+          </div>
+        </div>
+  </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
