--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -12,13 +11,11 @@
     <link href='../static/fonts/monaco.ttf' rel='stylesheet' type='text/css'>
     <link href='../static/fonts/lekton_regular.ttf' rel='stylesheet' type=
     'text/css'>
-
     <title>Contact list</title>
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
     <link href="../static/css/starter-template.css" rel="stylesheet">
 </head>
-
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -33,132 +30,86 @@
             </div>
         </div>
     </nav>
-
-
     <div class="container">
         <div class="starter-template">
-            <h1>Contacts:</h1>
-
-
+            <h1><strong>Contacts:</strong></h1>
             <div class="director clearfix">
                 <div class="title">
                     <ul>
                         <li class="list-group-item list-group-item-info">
                             <h2 class="persn">Founder</h2>
                         </li>
-
-
                         <li class="list-group-item list-group-item-warning">
                             <h6><b>Name:</b> Andy Ehrman</h6>
-
-
                             <h6><b>Skype:</b> andy_ehrman</h6>
-
-
                             <h6><b>Email:</b> andy_ehrman@gmail.com</h6>
-
-
                             <h6><b>Phone:</b> +7 8 10 445230051</h6>
                         </li>
                     </ul>
                 </div>
-
-
                 <div class="photo"><img alt="" src=
-                "../static/images/andy_ehrman.jpg">
-                </div>
-
-
+                "../static/images/andy_ehrman.jpg"></div>
                 <div class="info">
-                    <p>Taking on new material isn’t always easy. Through office
-                    hours and other channels, our TAs are here to provide you
-                    with answers, tips, and more</p>
+                    <blockquote class="blockquote-reverse">
+                        <p>"Hindi ako perfect and kahit kailan, hindi ko hihilingin na maging perfect ka. Ang hihilingin ko, subukan mong baguhin ang sarili mo para maramdaman mo na karapat-dapat ka. But you never tried."</p>
+                        <footer>
+                            Bea Alonzo in <cite title="Source Title">She’s the One (2013)</cite>
+                        </footer>
+                    </blockquote>
                 </div>
             </div>
-
-
             <div class="director clearfix">
                 <div class="title">
                     <ul>
                         <li class="list-group-item list-group-item-success">
                             <h2 class="persn">Director</h2>
                         </li>
-
-
                         <li class="list-group-item list-group-item-warning">
-                            <h2 class="persn">
-                            </h2>
-
-
                             <h6><b>Name:</b> Lizzy Rady</h6>
-
-
                             <h6><b>Skype:</b> lizzy_rady</h6>
-
-
                             <h6><b>Email:</b> lizzy_rady@gmail.com</h6>
-
-
                             <h6><b>Phone:</b> +7 8 10 445230052</h6>
                         </li>
                     </ul>
                 </div>
-
-
                 <div class="photo"><img alt="" src=
-                "../static/images/lizzy_rady.jpg">
-                </div>
-
-
+                "../static/images/lizzy_rady.jpg"></div>
                 <div class="info">
-                    <p>Learn industry-grade frameworks, tools, vocabulary, and
-                    best practices from a teacher whose daily work involves
-                    using them expertly</p>
+                    <blockquote class="blockquote-reverse">
+                        <p>"She loved me at my worst. You had me at my best, but binalewala mo lang ang lahat… And you chose to break my heart."</p>
+                        <footer>
+                            John Lloyd Cruz in <cite title="Source Title">One More Chance (2007)</cite>
+                        </footer>
+                    </blockquote>
                 </div>
             </div>
-
-
             <div class="director clearfix">
                 <div class="title">
                     <ul>
                         <li class="list-group-item list-group-item-success">
                             <h2 class="persn">Manager</h2>
                         </li>
-
-
                         <li class="list-group-item list-group-item-warning">
-                            <h2 class="persn">
-                            </h2>
-
-
-                            <h6><b>Name:</b> Katherine Rooks</h6>
-
-
+                            <h6 class="text-muted"><b>Name:</b> Katherine
+                            Rooks</h6>
                             <h6><b>Skype:</b> katherine_rooks</h6>
-
-
                             <h6><b>Email:</b> katherine_rooks@gmail.com</h6>
-
-
                             <h6><b>Phone:</b> +7 8 10 445230053</h6>
                         </li>
                     </ul>
                 </div>
-
-
                 <div class="photo"><img alt="" src=
-                "../static/images/katherine_rooks.jpg">
-                </div>
-
-
+                "../static/images/katherine_rooks.jpg"></div>
                 <div class="info">
-                    <p>Our alumni love their Course Producers, who keep them
-                    motivated throughout the course. You can reach out to yours
-                    for support anytime.</p>
+                    <blockquote class="blockquote-reverse">
+                        <p>"May mga maswerteng tao na nahanap na yung taong para sa kanila. May mga taong patuloy na naghahanap at may iba na sumuko na. Pero yung pinakamasaklap eh yung na sayo na pinakawalan mo pa."</p>
+                        <footer>
+                            John Lloyd Cruz in <cite title="Source Title">
+                            My Amnesia Girl (2010)</cite>
+                        </footer>
+                    </blockquote>
                 </div>
             </div>
-
-
             <div class="well well-lg">
                 Regards!
             </div>
