--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,7 +29,8 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Main</a></li>
-              <li class="active"><a href="contact.html">Contacts</a></li> i>
+               <li class="active"><a href="contact.html">Contacts</a></li>
+                <li class="active"><a href="student_list.html">Students</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
