--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -8,6 +8,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../static/images/favicon.ico">
+
+    <title>Students Detail</title>
+
     <!-- Bootstrap core CSS -->
      <link  rel="stylesheet" href="../static/css/bootstrap.css">
      <link rel="stylesheet" href="../static/css/style.css" >
